Bug 429224 - Enabling undo send results in empty return path breaking DKIM
Summary: Enabling undo send results in empty return path breaking DKIM
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Mail Dispatcher Agent (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-17 04:26 UTC by Björn Bidar (Thaodan)
Modified: 2020-11-18 13:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Bidar (Thaodan) 2020-11-17 04:26:08 UTC
SUMMARY

When undo send is enable in Kmail the sender in the email is empty resulting in an empt (<>) return-path in the email when it reaches the receiver.
An empty return-patch then breaks DKIM increasing the chance of the mail ends up in the junk folder

STEPS TO REPRODUCE
1. Enable undo send.
2. Send an email.
3. Oberseve

OBSERVED RESULT

Return-patch empty.

org.kde.pim.maildispatcher: Item 93423 does not have the required attribute Address.

EXPECTED RESULT

Return-patch not empty.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Arch Linux
(available in About System)
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 20.08.3
Qt Version: 5.15.1

ADDITIONAL INFORMATION
MTA: Postfix
Comment 1 Laurent Montel 2020-11-18 07:53:00 UTC
I confirm it.
I will look at it.
Comment 2 Laurent Montel 2020-11-18 08:11:34 UTC
ok I understood the bug. I will fix it soon.
Comment 3 Laurent Montel 2020-11-18 13:00:08 UTC
Git commit 4aa91c641f34e8d4eb97f134aa779601c868411d by Laurent Montel.
Committed on 18/11/2020 at 12:59.
Pushed by mlaurent into branch 'release/20.12'.

Fix Bug 429224 - Enabling undo send results in empty return path breaking DKIM

FIXED-IN: 5.16.0

M  +13   -7    messagecomposer/src/composer/composerviewbase.cpp
M  +1    -0    messagecomposer/src/composer/composerviewbase.h
M  +9    -1    messagecomposer/src/sender/akonadisender.cpp

https://invent.kde.org/pim/messagelib/commit/4aa91c641f34e8d4eb97f134aa779601c868411d