Fix Bug 429224 - Enabling undo send results in empty return path breaking DKIM

FIXED-IN: 5.16.0
BUG: 429224